fix #11257 - Remove apache.commons.codecs - patch by Florian Schaefer
git-svn-id: http://josm.openstreetmap.de/svn/trunk@8149 0c6e7542-c601-0410-84e7-c038aed88b3b